--- a/estilos/css/modulos/modulos.css
+++ b/estilos/css/modulos/modulos.css
@@ -3,3 +3,4 @@
 @import url("./navegacion_inicio.css");
 @import url("./menu.css");
 @import url("./menu__configuracion.css");
+@import url("./aside__contacto__social__icono.css");
