--- a/estilos/configuracion.css
+++ b/estilos/configuracion.css
@@ -1,121 +1,137 @@
 /** @format */
 
 :root {
-  /* Alturas */
-  --altura-completa: 100%;
-  --altura-contenido: 70rem;
-  --altura-grande: 80vh;
-  --altura-mediano: 60vh;
-  --altura-minima: 20vh;
-  --altura-navbar: 1.5rem;
-  --altura-reducido: 40vh;
+	/* Alturas */
+	--altura-completa: 100%;
+	--altura-contenido: 70rem;
+	--altura-grande: 80vh;
+	--altura-mediano: 60vh;
+	--altura-minima: 20vh;
+	--altura-navbar: 1.6rem;
+	--altura-reducido: 40vh;
 
-  /* Anchos */
-  --ancho-completo: 100%;
-  --ancho-contenido: 70rem;
-  --ancho-grande: 75%;
-  --ancho-maximo: 90%;
-  --ancho-mediano: 50%;
-  --ancho-minimo: 10%;
-  --ancho-reducido: 25%;
-  --ancho-menu: 100%;
+	/* Anchos */
+	--ancho-completo: 100%;
+	--ancho-contenido: 70rem;
+	--ancho-grande: 75%;
+	--ancho-maximo: 90%;
+	--ancho-mediano: 50%;
+	--ancho-minimo: 10%;
+	--ancho-reducido: 25%;
+	--ancho-menu: 100%;
 
-  /* Bordes */
-  /* Bordes */
-  --borde-estandar: 1rem;
-  --borde-extra-grande: 3rem;
-  --borde-extra-reducido: 0.0625rem;
-  --borde-grande: 2rem;
-  --borde-mediano: 1.5rem;
-  --borde-reducido: 0.125rem;
+	/* Bordes */
+	/* Bordes */
+	--borde-estandar: 1rem;
+	--borde-extra-grande: 3rem;
+	--borde-extra-reducido: 0.0625rem;
+	--borde-grande: 2rem;
+	--borde-mediano: 1.5rem;
+	--borde-reducido: 0.125rem;
 
-  /* Colores principales */
-  --color-menu: #90e0ef;
-  --color-principal: #00f;
-  --color-primario: #007bff;
-  --color-secundario: #0077b655;
-  --color-terciario: #caf0f855;
+	/* Colores principales */
+	--color-menu: #00ffffb0;
+	--color-principal: #00f;
+	--color-primario: #007bff;
+	--color-secundario: #0077b655;
+	--color-terciario: #caf0f855;
 
-  --color-texto: #ffffff;
-  --color-subtitulo: #ffffff;
-  --color-titulo: #ffffff;
-  --color-titulo-grande: #ffffff;
+	--color-texto: #ffffff;
+	--color-subtitulo: #ffffff;
+	--color-titulo: #ffffff;
+	--color-titulo-grande: #ffffff;
 
-  /* Medidas textos */
-  --medida-texto: 1.1rem;
-  --medida-texto-extra-grande: 1.5rem;
-  --medida-texto-extra-reducido: 0.5rem;
-  --medida-texto-grande: 1.3rem;
-  --medida-texto-mediano: 0.8rem;
-  --medida-texto-reducido: 0.6rem;
+	/* Medidas textos */
+	--medida-texto: 1.1rem;
+	--medida-texto-extra-grande: 2rem;
+	--medida-texto-extra-reducido: 0.5rem;
+	--medida-texto-grande: 1.4rem;
+	--medida-texto-mediano: 0.8rem;
+	--medida-texto-reducido: 0.6rem;
 
-  /* Medidas títulos  */
-  --medida-titulo: 2.4rem;
-  --medida-subtitulo: 1.3rem;
-  --medida-titulo-extra-grande: 4rem;
-  --medida-titulo-extra-reducido: 0.5rem;
-  --medida-titulo-grande: 2.6rem;
+	/* Medidas títulos  */
+	--medida-titulo: 4rem;
+	--medida-subtitulo: 1.3rem;
+	--medida-titulo-extra-grande: 6rem;
+	--medida-titulo-extra-reducido: 0.5rem;
+	--medida-titulo-grande: 2.6rem;
 
-  /* Márgenes */
-  --margen-extra-grande: 4rem;
-  --margen-extra-reducido: 0.25rem;
-  --margen-grande: 2rem;
-  --margen-mediano: 1.5rem;
-  --margen-reducido: 1rem;
+	/* Márgenes */
+	--margen-extra-grande: 4rem;
+	--margen-extra-reducido: 0.25rem;
+	--margen-grande: 2rem;
+	--margen-mediano: 1.5rem;
+	--margen-reducido: 1rem;
 
-  /* Rellenos */
-  --relleno-extra-grande: 2rem;
-  --relleno-extra-reducido: 0.25rem;
-  --relleno-grande: 1.5rem;
-  --relleno-mediano: 1rem;
-  --relleno-reducido: 0.5rem;
+	/* Rellenos */
+	--relleno-extra-grande: 2rem;
+	--relleno-extra-reducido: 0.25rem;
+	--relleno-grande: 1.5rem;
+	--relleno: 1rem;
+	--relleno-reducido: 0.5rem;
 
-  /* Paleta de colores */
-  --color-paleta1: #0000ff;
-  --color-paleta2: #007bff;
-  --color-paleta3: #0077b6;
-  --color-paleta4: #00c3ff;
-  --color-paleta5: #00b4d8;
-  --color-paleta6: #90e0ef;
-  --color-paleta7: #caf0f8;
-  --color-hover: #00ffff;
-  /* Colores */
+	/* Paleta de colores */
+	--color-paleta1: #0000ff;
+	--color-paleta2: #007bff;
+	--color-paleta3: #0077b6;
+	--color-paleta4: #00c3ff;
+	--color-paleta5: #00b4d8;
+	--color-paleta6: #90e0ef;
+	--color-paleta7: #caf0f8;
+	--color-hover: #00ffff;
+	/* Colores */
 
-  /* Sombra del texto */
-  --sombra-1: 1px 1px 0;
-  --sombra-2: 2px 2px 0;
-  --sombra-3: 3px 3px 0;
-  --sombra-4: 4px 4px 0;
+	/* Sombra del texto */
+	--sombra-1: 1px 1px 0;
+	--sombra-2: 2px 2px 0;
+	--sombra-3: 3px 3px 0;
+	--sombra-4: 4px 4px 0;
 
-  /* Fuentes */
-  --fuente-primaria: "Montserrat", sans-serif; /* Fuente principal */
+	/* Fuentes */
+	--fuente-primaria: "Montserrat", sans-serif; /* Fuente principal */
 
-  /* Tamaños de Fuente */
-  --tamano-titulo: 2rem; /* Tamaño del título */
-  --tamano-subtitulo: 1.5rem; /* Tamaño del subtítulo */
-  --tamano-texto: 1rem; /* Tamaño del texto */
-  --tamano-texto-pequeno: 0.875rem; /* Tamaño del texto pequeño */
+	/* Tamaños de Fuente */
+	--tamano-titulo: 1.8rem; /* Tamaño del título */
+	--tamano-subtitulo: 1.4rem; /* Tamaño del subtítulo */
+	--tamano-texto: 0.9rem; /* Tamaño del texto */
+	--tamano-texto-pequeno: 0.85rem; /* Tamaño del texto pequeño */
 
-  /* Espaciado */
-  --margen: 1.5rem; /* Margen principal */
-  --padding: 1rem; /* Relleno (padding) principal */
-  --espaciado-entre-lineas: 1.6; /* Espaciado entre líneas */
+	/* Espaciado */
+	--margen: 1.5rem; /* Margen principal */
+	--padding: 1rem; /* Relleno (padding) principal */
+	--espaciado-entre-lineas: 1.6; /* Espaciado entre líneas */
 
-  /* Bordes */
-  --borde: 1px solid #0ff; /* Borde principal */
-  --borde-reducido: 2px solid var(--color-borde); /* Borde fino */
-  --borde-redondeado: 5px; /* Borde redondeado */
-  --borde-mediano: 1.5rem; /* Borde redondeado */
-  /* Otros Estilos */
-  --sombra-caja: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1); /* Sombra de la caja */
-  --sombra-texto: 0px 0.0625rem 0.1875rem rgba(0, 0, 0, 0.3); /* Sombra del texto */
-  --delay: 2s;
+	/* Bordes */
+	--borde: 0.8px solid #0ff; /* Borde principal */
+	--borde-reducido: 0.5px solid var(--color-borde); /* Borde fino */
+	--borde-redondeado: 5px; /* Borde redondeado */
+	--borde-mediano: 1.5rem; /* Borde redondeado */
+	/* Otros Estilos */
+	--sombra-caja: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1); /* Sombra de la caja */
+	--sombra-texto: 0px 0.0625rem 0.1875rem rgba(0, 0, 0, 0.3); /* Sombra del texto */
+	--delay: 2s;
 }
 
 .margen__grande {
-  margin-top: var(--margen-grande);
+	margin-top: var(--margen-grande);
 }
 
 .margen__mediano {
-  margin-top: var(--margen-mediano);
+	margin-top: var(--margen-mediano);
+}
+
+.sombra__texto {
+	box-shadow: var(--sombra-texto);
+}
+
+.padding-grande {
+	padding: var(--relleno-grande); /* Relleno grande */
+}
+
+.padding-normal {
+	padding: var(--relleno); /* Relleno estándar */
+}
+
+.padding-reducido {
+	padding: var(--relleno-reducido); /* Relleno reducido */
 }
