--- a/estilos/css/animaciones/efectos__combinados.css
+++ b/estilos/css/animaciones/efectos__combinados.css
@@ -6,9 +6,14 @@
 
 .efectos__combinados h5,
 .efectos__combinados h6 {
-  font-size: 1.5rem;
+  font-size: var(--texto);
   position: relative;
   margin: 10px 0;
+}
+
+.efectos__combinados h5 span,
+.efectos__combinados h6 span {
+  font-size: var(--texto-grande);
 }
 
 .efectos__combinados h5 {
