--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,4 +1,4 @@
-@import url('./configuracion.css');
-@import url('./css/principal.css');
-@import url('./movil.css');
-@import url('./general.css');
+@import url("./configuracion.css");
+@import url("./css/principal.css");
+@import url("./general.css");
+@import url("./movil.css");
