--- a/assets/apps/sara/css/movil.css
+++ b/assets/apps/sara/css/movil.css
@@ -5,3 +5,22 @@
     justify-content: center;
   }
 }
+
+/* Estilos para flexibilidad responsiva */
+@media (max-width: 1200px) {
+  .tablero__contenedor__sarita .texto {
+    flex: 1 0 calc(20% - 15px); /* Siempre 5 columnas */
+  }
+}
+
+@media (max-width: 800px) {
+  .tablero__contenedor__sarita .texto {
+    flex: 1 0 calc(20% - 10px); /* Siempre 5 columnas */
+  }
+}
+
+@media (max-width: 600px) {
+  .tablero__contenedor__sarita .texto {
+    flex: 1 0 calc(20% - 5px); /* Siempre 5 columnas */
+  }
+}
