--- a/estilos/css/utilidades/fuentes_textos.css
+++ b/estilos/css/utilidades/fuentes_textos.css
@@ -1,5 +1,17 @@
 /** @format */
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+/* Importar Lato */
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
+
+/* Importar Poppins */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
+
+/* Importar Playfair Display */
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap");
+
+/* Importar Open Sans */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap");
+
 /* Fuentes adicionales */
 .playwrite-us-trad-u {
 	font-family: "Playwrite US Trad", cursive;
@@ -65,6 +77,7 @@
 .texto {
 	font-size: var(--medida-texto);
 	transition: all 4s ease-out;
+	font-family: var(--fuente-secundaria);
 }
 
 .texto span {
@@ -94,6 +107,7 @@
 	text-align: center;
 	display: inline-block;
 	margin: 1rem 0;
+	font-family: "Montserrat";
 	font-size: var(--medida-titulo);
 	text-shadow: 1px 1px 15px var(--color-paleta2),
 		1px 0 25px var(--color-paleta1), 1px 1px 35px var(--color-paleta2),
